(fix) Align the orders table toolbar date range picker with the search (#781)

--- a/src/components/orders-table/orders-data-table.scss
+++ b/src/components/orders-table/orders-data-table.scss
@@ -110,10 +110,6 @@
 .tableToolBar {
   height: auto;
   align-items: flex-end;
-
-  :global(.cds--toolbar-search-container-expandable) {
-    align-self: flex-end;
-  }
 }
 
 .menuitem {
